# QSortLab

./: CMakeLists.txt  README.md  build_and_run_release_bench.sh  main.cpp  qsort_par.h  qsort_seq_my.h  qsort_seq_std.h  utils.h
